tests/resource/valid/collection/infer_collection_type_for_fun.mamba
def x := [0, 2, 51]

def y := x[0]

def f(x: Int) -> Int => x + 5

f(y)
