tests/resource/invalid/type/function/not_enough_arg_with_default.mamba
def f(x: Int, y: Int, z: Int := 5) -> Int => x + y

f(1)
